"$Id$"
Top of CVS tree:
------------------------------------------------------------------------------

Fix various GAIM/GTK links.
 gtk/win32/gtkclient.nsi Running.txt
Nicolas Weeger 2007-07-05

utils/mdk.sh: Make script work again.
Andreas Kirschbaum 2007-06-27

Remove Gnome client, which is not built anyway.
Deleted:
 gnome
Modified:
 aclocal.m4 configure configure.in
Nicolas Weeger 2007-06-18

Trash obsolete junk.
 common/client.c image.c item.c misc.c p_cmd.c proto.h
Nicolas Weeger 2007-06-18

Remove 'map1cmd' variable which is always 1.
 common/client.c client.h commands.c
 gnome/map.c
Nicolas Weeger 2007-06-18

Remove map1cmd, face, face1, item1 and some obsolete stuff.
 common/client.c commands.c image.c mapdata.c mapdata.h proto.h
Nicolas Weeger 2007-06-18

common/p_cmd.c: remove 'resist' command, duplicates server-side 'resistances' giving more info.
Nicolas Weeger 2007-06-18

configure.in: Add another eval $ndatadir line so properly resolve all
the shell variable names so that CF_DATADIR is set properly in common/config.h
--
MSW 2007-06-11

gtk-v2/src/inventory.c: Add tooltips to the inventory tabs, to make it
clearer what the different tabs do.
--
MSW 2007-06-11

Add pick up menu updating support for gtk2 client - when you log in, it
will get your character pickup mode and update the check boxes accordingly.
---
gtk-v2/gtk-v2.glade: Change "don't_pickup1" widget name to "do_not_pickup"
gtk-v2/src/interface.c: Rebuilt
gtk-v2/src/main.c: Remove empty client_pickup() function, add pickup_init()
gtk-v2/src/pickup.c: Bunch of new code to support pickup updating - mostly
  a mapping from menu items to pickup modes, since glade doesn't let us
  store those attributes in the menu item.
MSW 2007-06-11

Remove obsolete mapredraw command (empty on server-side).
 common/p_cmd.c
 gnome/map.c
 gtk/config.c map.c
 gtk-v2/src/config.c map.c
 x11/xutil.c
Nicolas Weeger 2007-06-02

Apply patch #1720388: data len in client.c is calculated wrong
 courtesy Jürgen Kahnert.