@@ -2,6 +2,9 @@
 Top of CVS tree:
 ------------------------------------------------------------------------------
 
+gtk-v2/src/inventory.c: Add support for client side animation of look window.
+MSW 2007-07-09
+
 Fix various GAIM/GTK links.
  gtk/win32/gtkclient.nsi Running.txt
 Nicolas Weeger 2007-07-05
